--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/nextjs-registry": "^1.0.1",
+    "antd": "^5.21.5",
+    "antd-style": "^3.7.1",
+    "axios": "^1.7.7",
+    "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.16"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.16"
   }
